// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders button correctly 1`] = `
<Button
  containerStyle={
    Array [
      Object {
        "backgroundColor": "#374A59",
        "borderRadius": 8,
        "overflow": "hidden",
        "padding": 10,
      },
      Object {
        "backgroundColor": "#374A59",
      },
      undefined,
    ]
  }
  style={
    Array [
      Object {
        "color": "#374A59",
      },
      Object {
        "color": "#374A59",
      },
      undefined,
    ]
  }
/>
`;

exports[`renders circle toggle correctly 1`] = `
<Button
  on={false}
  onPress={[Function]}
  testID="circle-button"
  value="1"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "#C7CDD1",
          "borderRadius": 24,
          "borderWidth": 0.5,
          "flex": 1,
          "height": 48,
          "justifyContent": "center",
          "minWidth": 48,
          "paddingHorizontal": 8,
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": ".SFUIDisplay",
          },
          Object {
            "color": "#2D3B45",
            "fontFamily": ".SFUIDisplay-semibold",
            "fontSize": 20,
          },
          Object {
            "color": "black",
            "fontWeight": "500",
          },
        ]
      }
    >
      4
    </Text>
  </View>
</Button>
`;

exports[`renders circle toggle when on correctly 1`] = `
<Button
  on={true}
  onPress={[Function]}
  testID="circle-button"
  value="1"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "#C7CDD1",
          "borderRadius": 24,
          "borderWidth": 0.5,
          "flex": 1,
          "height": 48,
          "justifyContent": "center",
          "minWidth": 48,
          "paddingHorizontal": 8,
        },
        undefined,
        Object {
          "backgroundColor": "#374A59",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": ".SFUIDisplay",
          },
          Object {
            "color": "#2D3B45",
            "fontFamily": ".SFUIDisplay-semibold",
            "fontSize": 20,
          },
          Object {
            "color": "white",
            "fontWeight": "500",
          },
        ]
      }
    >
      4
    </Text>
  </View>
</Button>
`;

exports[`renders circle toggle with an image 1`] = `
<Button
  on={false}
  onPress={[Function]}
  testID="circle-button"
  value="1"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "#C7CDD1",
          "borderRadius": 24,
          "borderWidth": 0.5,
          "flex": 1,
          "height": 48,
          "justifyContent": "center",
          "minWidth": 48,
          "paddingHorizontal": 8,
        },
        undefined,
      ]
    }
  >
    <Image
      source={1}
    />
  </View>
</Button>
`;

exports[`renders link correctly 1`] = `
<Button>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": ".SFUIDisplay",
        },
        Object {
          "color": "#2D3B45",
          "fontSize": 16,
        },
        Array [
          Object {
            "color": "#374A59",
            "fontSize": 14,
          },
          Object {
            "fontFamily": ".SFUIDisplay-bold",
          },
          Object {
            "color": "#374A59",
          },
          undefined,
        ],
        Object {
          "fontFamily": ".SFUIDisplay",
        },
      ]
    }
  />
</Button>
`;
